--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,252 @@
-backcall==0.2.0
-certifi==2020.6.20
+absl-py==0.9.0
+aiohttp==3.3.2
+alabaster==0.7.11
+argh==0.26.2
+asn1crypto==0.24.0
+astroid==1.6.5
+async-timeout==3.0.0
+atomicwrites==1.1.5
+attelo==0.3
+attrs==18.1.0
+aws-xray-sdk==0.95
+awscli==1.15.51
+Babel==2.6.0
+backcall==0.1.0
+backports.csv==1.0.6
+backports.functools-lru-cache==1.5
+beautifulsoup4==4.6.3
+bleach==2.1.4
+boto==2.48.0
+boto3==1.7.50
+botocore==1.10.50
+bz2file==0.98
+cachetools==3.0.0
+certifi==2018.4.16
+cffi==1.11.2
 chardet==3.0.4
-click==7.1.2
+charset-normalizer==2.0.4
+cheroot==6.5.2
+CherryPy==18.0.1
+click==6.7
+climate==0.1.0
+codecov==2.0.15
+colorama==0.3.9
+conllu==0.11
+cookies==2.2.1
+coverage==4.5.1
+cryptography==2.3.1
+cssselect==1.0.3
+cycler==0.10.0
+cymem==1.31.2
+cytoolz==0.8.2
 dataclasses==0.7
-decorator==4.4.2
+decorator==4.3.0
+depparse==0.1.0
+dill==0.2.8.2
+docker==3.5.0
+docker-pycreds==0.3.0
+docutils==0.14
+docx==0.2.4
+ecdsa==0.13
+editdistance==0.4
+emoji==0.5.1
+en-core-web-lg==2.0.0
+en-core-web-md==2.0.0
+en-core-web-sm==2.0.0
+entrypoints==0.2.3
+enum34==1.1.6
+feedparser==5.2.1
 filelock==3.0.12
-future==0.18.2
-idna==2.10
-ipython==7.16.1
+flaky==3.4.0
+Flask==0.12.1
+Flask-Cors==3.0.3
+ftfy==5.4.1
+future==0.16.0
+gdown==3.12.0
+gensim==3.4.0
+gevent==1.3.5
+google-api-python-client==1.7.5
+google-auth==1.18.0
+google-auth-httplib2==0.0.3
+google-auth-oauthlib==0.4.1
+greenlet==0.4.13
+grpcio==1.30.0
+h5py==2.8.0
+html5lib==1.0.1
+httplib2==0.12.0
+idna==2.7
+idna-ssl==1.1.0
+imagesize==1.0.0
+importlib-metadata==1.7.0
+ipykernel==4.8.2
+ipython==6.4.0
 ipython-genutils==0.2.0
-jedi==0.17.2
-joblib==0.16.0
-nltk==3.5
-numpy==1.19.0
-packaging==20.4
-pandas==1.0.5
-parso==0.7.0
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==7.2.0
-prompt-toolkit==3.0.5
+ipywidgets==7.4.0
+isort==4.3.4
+itsdangerous==0.24
+jaraco.functools==1.20
+jedi==0.12.1
+Jinja2==2.10
+jmespath==0.9.3
+joblib==0.14.0
+jsondiff==1.1.1
+jsonnet==0.10.0
+jsonpickle==0.9.6
+jsonschema==2.6.0
+jupyter==1.0.0
+jupyter-client==5.2.3
+jupyter-console==5.2.0
+jupyter-core==4.4.0
+kiwisolver==1.0.1
+langid==1.1.6
+lazy-object-proxy==1.3.1
+littleutils==0.2.2
+livereload==2.5.2
+lxml==4.2.5
+Markdown==3.2.2
+MarkupSafe==1.0
+matplotlib==3.2.1
+mccabe==0.6.1
+mistune==0.8.3
+mock==2.0.0
+more-itertools==4.2.0
+moto==1.3.4
+msgpack-numpy==0.4.1
+msgpack-python==0.5.6
+multidict==4.3.1
+murmurhash==0.28.0
+mypy==0.521
+mysqlclient==1.3.13
+nbconvert==5.3.1
+nbformat==4.4.0
+nltk==3.3
+notebook==5.6.0
+numpy==1.18.3
+numpydoc==0.8.0
+oauthlib==2.1.0
+openai==0.2.4
+outdated==0.2.0
+overrides==1.9
+packaging==17.1
+pandas==1.0.3
+pandas-flavor==0.2.0
+pandocfilters==1.4.2
+parsimonious==0.8.0
+parso==0.3.0
+pathlib==1.0.1
+pathtools==0.1.2
+patsy==0.5.1
+Pattern==2.6
+pbr==4.2.0
+pdfminer.six==20170720
+pdfminer3k==1.3.1
+pexpect==4.6.0
+pickleshare==0.7.4
+Pillow==8.3.1
+pingouin==0.3.12
+pkginfo==1.4.2
+plac==0.9.6
+pluggy==0.6.0
+ply==3.11
+port-for==0.3.1
+portend==2.3
+preshed==1.0.0
+prometheus-client==0.3.1
+prompt-toolkit==1.0.15
+protobuf==3.6.0
+psycopg2==2.7.5
+psycopg2-binary==2.7.5
 ptyprocess==0.6.0
-Pygments==2.6.1
-pyparsing==2.4.7
-python-dateutil==2.8.1
-pytz==2020.1
-regex==2020.7.14
-requests==2.24.0
+py==1.5.4
+py-rouge==1.1
+pyaml==17.12.1
+pyasn1==0.4.3
+pyasn1-modules==0.2.2
+pycparser==2.18
+pycryptodome==3.6.6
+pydot==1.4.1
+Pygments==2.2.0
+pyhocon==0.3.35
+pylint==1.8.1
+PyMySQL==0.9.2
+pypandoc==1.4
+pyparsing==2.2.0
+pyquery==1.4.0
+pytest==3.6.2
+pytest-cov==2.5.1
+python-dateutil==2.7.3
+python-docx==0.8.7
+python-jose==2.0.2
+python-twitter==3.5
+pytorch-pretrained-bert==0.4.0
+pytz==2017.3
+PyYAML==3.12
+pyzmq==17.1.2
+qtconsole==4.4.1
+regex==2017.4.5
+requests==2.26.0
+requests-oauthlib==1.0.0
+requests-toolbelt==0.8.0
+responses==0.9.0
+rsa==3.4.2
+s3transfer==0.1.13
 sacremoses==0.0.43
+scikit-learn==0.19.1
+scipy==1.5.2
+seaborn==0.10.1
+Send2Trash==1.5.0
 sentencepiece==0.1.91
-six==1.15.0
+seq2seq==0.1.6
+simplegeneric==0.8.1
+simplejson==3.16.0
+six==1.11.0
+sklearn==0.0
+smart-open==1.6.0
+snowballstemmer==1.2.1
+spacy==2.0.11
+Sphinx==1.5.3
+sphinx-autobuild==0.7.1
+sphinx-rtd-theme==0.4.1
+sphinxcontrib-websupport==1.1.0
+SQLAlchemy==1.2.12
+sqlparse==0.2.4
+statsmodels==0.11.1
+tabulate==0.8.6
+tempora==1.13
+tensorboard==2.2.2
+tensorboard-plugin-wit==1.7.0
+tensorboardX==1.2
+termcolor==1.1.0
+terminado==0.8.1
+testpath==0.3.1
+textblob==0.15.3
+thinc==6.10.2
 tokenizers==0.8.1rc1
+toolz==0.9.0
 torch==1.5.1+cu92
+torchtext==0.3.1
 torchvision==0.6.1+cu92
-tqdm==4.48.0
-traitlets==4.3.3
+tornado==5.1
+tqdm==4.47.0
+traitlets==4.3.2
 transformers==3.0.2
-urllib3==1.25.9
-wcwidth==0.2.5
+twine==1.11.0
+typed-ast==1.0.4
+typing==3.6.4
+ujson==1.35
+Unidecode==1.0.22
+uritemplate==3.0.0
+urllib3==1.26.6
+watchdog==0.8.3
+wcwidth==0.1.7
+webencodings==0.5.1
+websocket-client==0.51.0
+Werkzeug==0.14.1
+widgetsnbextension==3.4.0
+wmd==1.3.2
+wrapt==1.10.11
+xarray==0.15.1
+xmltodict==0.11.0
+yarl==1.2.6
+zc.lockfile==1.3.0
+zipp==3.1.0
